--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "consumedServices": {
+    "ink": {
+      "versions": {
+        "*": "consumeInk"
+      }
+    }
+  },
   "dependencies": {
     "coffee-script": "^1.8.0"
   }
